data entry mfe changes

--- a/packages/dataentry-mfe/package.json
+++ b/packages/dataentry-mfe/package.json
@@ -66,6 +66,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "@univerjs/core": "^0.1.7",
+    "@univerjs/design": "^0.1.7",
+    "@univerjs/docs": "^0.1.7",
+    "@univerjs/docs-ui": "^0.1.7",
+    "@univerjs/engine-formula": "^0.1.7",
+    "@univerjs/engine-render": "^0.1.7",
+    "@univerjs/sheets": "^0.1.7",
+    "@univerjs/sheets-formula": "^0.1.7",
+    "@univerjs/sheets-ui": "^0.1.7",
+    "@univerjs/ui": "^0.1.7",
     "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
