added env changes

--- a/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
+++ b/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
@@ -878,5 +878,7 @@ definitions:
       userinfoIntrospectionUri:  
         type: string
       enableUserinfoIntrospection: 
-        type : boolean          
+        type : boolean     
+      env:
+        type : string     
  
