univer spreadsheet implementation

--- a/packages/dataentry-mfe/package.json
+++ b/packages/dataentry-mfe/package.json
@@ -65,21 +65,26 @@
     ]
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.10.6",
     "@reduxjs/toolkit": "^2.2.1",
     "@univerjs/core": "^0.1.7",
     "@univerjs/design": "^0.1.7",
     "@univerjs/docs": "^0.1.7",
     "@univerjs/docs-ui": "^0.1.7",
     "@univerjs/engine-formula": "^0.1.7",
+    "@univerjs/engine-numfmt": "^0.1.7",
     "@univerjs/engine-render": "^0.1.7",
     "@univerjs/sheets": "^0.1.7",
     "@univerjs/sheets-formula": "^0.1.7",
+    "@univerjs/sheets-numfmt": "^0.1.7",
     "@univerjs/sheets-ui": "^0.1.7",
     "@univerjs/ui": "^0.1.7",
+    "@wendellhu/redi": "^0.13.0",
     "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
     "classnames": "^2.3.1",
+    "clsx": "^2.1.0",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.5",
     "env-cmd": "^10.1.0",
@@ -96,6 +101,7 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
+    "rxjs": "^7.8.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "url-loader": "^4.1.1",
