--- a/deployment/kubernetes/helm/charts/airflow/templates/backend/pvc.yaml
+++ b/deployment/kubernetes/helm/charts/airflow/templates/backend/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Chart.Name }}-dags
+  name: {{ .Chart.Name }}-nfs-dags
   namespace: {{ .Values.namespace }}
 spec:
   accessModes:
