added planningIt auth header

--- a/packages/data-product-backend/data-product-lib/src/main/resources/application.yml
+++ b/packages/data-product-backend/data-product-lib/src/main/resources/application.yml
@@ -75,6 +75,8 @@ xapikeydetails:
 dashboard:
   uri: ${REPORTS_BASE_URL:XXXXXXX}
 
+planningIT.headers.authorization.token: ${PLANNINGIT_HEADER_AUTH:XXXXXX}
+
 server:
   port: 7184
 
